# CoreQuarry

./: .gitmodules  CMakeLists.txt  CNAME  README.md  _config.yml
docs/: CoreQuarryBriefing.odt  CoreQuarryGlossary.odt  CoreQuarryManifesto.odt
